refactored routes names
